# neverust

./: .gitignore  .gitmodules  .pre-commit-config.yaml  ADDITIONAL_COMPATIBILITY_ISSUES.md  ARCHIVIST_COMPATIBILITY_REPORT.md  ARCHIVIST_COMPATIBILITY_ROADMAP.md  ARCHIVIST_NODE_ARCHITECTURE.md  BLOCKEXC_DISCOVERY_FLOW.md  BLOCKEXC_DISCOVERY_INTEGRATION.md  CLAUDE.md  COMPATIBILITY_ANALYSIS_SUMMARY.md  COMPATIBILITY_VALIDATION_REPORT.md  Cargo.toml  DISCOVERY_ENGINE_IMPLEMENTATION.md  DOCUMENTATION_INDEX.md  Dockerfile  EXPLORATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  ISSUES.md  LICENSE  MANIFEST_IMPLEMENTATION.md  MANIFEST_RESEARCH_SUMMARY.md  PROTOCOL_SPECIFICATION_QUICK_REF.md  README.md  TESTNET_DEPLOYMENT.md  WANTLIST_ENTRY_MIGRATION.md  benchmark-results.txt  flake.nix  package-lock.json  package.json  playwright.config.ts
.github/workflows/: ci.yml
benches/: p2p_benchmarks.rs
benchmarks/: README.md  aggressive_benchmark.py  docker-compose-50.yml  docker-compose.yml  generate-compose.py  prometheus.yml  traffic-generator.sh
benchmarks/grafana/dashboards/: neverust-overview.json
benchmarks/grafana/provisioning/dashboards/: default.yml
benchmarks/visualizer/: Dockerfile  app.py  requirements.txt
benchmarks/visualizer/templates/: index.html
crates/: common  crypto  peerexc  proofs  storage  tgp  transport-udp
crates/discv5/src/: rpc.rs  service.rs
crates/discv5/src/packet/: mod.rs
data/blocks/: IDENTITY  LOG  LOG.old.1759569343154931  LOG.old.1759570684329855  OPTIONS-000007
docs/: ARCHIVIST_CLUSTER_DESIGN.md  ARCHIVIST_FFI_INTEROP.md  CITADEL_RESEARCH_AND_IDLE_GATE.md  ETH2077_ARCHIVIST_DEPLOYMENT_PREP.md  PRODUCTION_HOST_10_7_1_200.md  README-MANIFEST.md  advertiser-architecture.md  api-reference.md  archivist-manifest-protobuf-format.md  blockstore-callbacks.md  chunker-implementation.md  delta-store-design.md  manifest-implementation-guide.md  manifest-quick-reference.md  manifest-wire-format-examples.md  moosefs-geometry-autonomous-research.md  primitive-lab.md  range-retrieval.md  storage-geometry-design.md  testnet-integration-test-report.md
examples/: advertiser_example.rs  chunker_demo.rs  cluster_pin_orchestrator.rs  transfer_qps_bench.rs  upload_bench_50g.rs
issues/: NEVAR-1.md  NEVAR-10.md  NEVAR-2.md  NEVAR-3.md  NEVAR-4.md  NEVAR-5.md  NEVAR-6.md  NEVAR-7.md  NEVAR-8.md  NEVAR-9.md
neverust-core/: Cargo.toml
neverust-core/examples/: manifest_demo.rs  verify_codec.rs
neverust-core/ffi/: archivist_ffi.nim
neverust-core/proto/: message.proto
neverust-core/src/: advertiser.rs  api.rs  archivist_cluster.rs  archivist_tree.rs  blockexc.rs  botg.rs  chunker.rs  cid_blake3.rs  citadel.rs  cluster.rs  config.rs  discovery.rs  discovery_engine.rs  eth_key.rs  identify_shim.rs  identify_spr.rs  lib.rs  manifest.rs  messages.rs  metrics.rs  p2p.rs  pending_blocks.rs  runtime.rs  spr.rs  storage.rs  traffic.rs
neverust-core/tests/: archivist_ffi_interop.rs  archivist_parity_test.rs  test_spr_format.rs
proofs/lean/: README.md  lake-manifest.json  lakefile.lean
proofs/lean/NeverustProofs/: DeploymentSafety.lean  ProbeAllocation.lean  StorageGeometry.lean  StripeClasses.lean
scripts/: autonomous_moosefs_research.sh  vice_scoreboard_from_csv.py
scripts/production/: comprehensive_crosscut_suite.sh  setup_host_10_7_1_200.sh
scripts/production/eth2077/: archivist-eth2077.10-7-1-200.env  archivist-eth2077.env.example  preflight_archivist_eth2077.sh  rollout_archivist_eth2077_10_7_1_200.sh  setup_archivist_eth2077.sh
scripts/production/systemd/: archivist.service  neverust.service
src/: main.rs
tests/: block_exchange_test.rs  integration_test.rs  manifest_integration.rs  performance_test.rs
tests/ui/: health.spec.ts  metrics.spec.ts
