[workspace]
members = ["neverust-core"]
resolver = "2"

[package]
name = "neverust"
version = "0.1.0"
edition = "2021"
authors = ["Neverust Contributors"]
license = "MIT OR Apache-2.0"
description = "Archivist Storage Node in Rust"

[dependencies]
neverust-core = { path = "./neverust-core" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 0
debug = true
