[package]
name = "neverust-core"
version = "0.1.0"
edition = "2021"
authors = ["Neverust Contributors"]
license = "MIT OR Apache-2.0"
description = "Core P2P and storage functionality for Neverust"

[dependencies]
libp2p = { version = "0.52", features = ["tcp", "quic", "tokio", "macros", "secp256k1", "noise"] }
libp2p-mplex = "0.40"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
futures = "0.3"
void = "1"
clap = { version = "4", features = ["derive"] }
base64 = "0.21"
prost = { version = "0.12", features = ["derive"] }
reqwest = { version = "0.11", features = ["default", "json"] }
rand = "0.8"
blake3 = "1.5"
multihash = "0.19"
cid = "0.11"
unsigned-varint = "0.8"
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
bytes = "1.5"
bincode = "1.3"

# TGP (Two Generals Protocol) for Block-over-TGP (BoTG)
consensus-tgp = { path = "../crates/tgp" }
consensus-common = { path = "../crates/common" }
consensus-peerexc = { path = "../crates/peerexc" }
consensus-transport-udp = { path = "../crates/transport-udp" }
consensus-storage = { path = "../crates/storage" }

[dev-dependencies]
tokio-test = "0.4"
hex = "0.4"
