[package]
name = "neverust-core"
version = "0.1.0"
edition = "2021"
authors = ["Neverust Contributors"]
license = "MIT OR Apache-2.0"
description = "Core P2P and storage functionality for Neverust"

[dependencies]
libp2p = { version = "0.56", features = ["tcp", "quic", "tokio", "macros", "secp256k1", "noise", "identify", "yamux"] }
libp2p-mplex = "0.43"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1"
futures = "0.3"
void = "1"
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
prost = { version = "0.14", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rand = "0.8"
blake3 = "1.5"
sha2 = "0.10"
multihash = "0.19"
cid = "0.11"
unsigned-varint = "0.8"
axum = "0.8"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
bytes = "1.5"
redb = "2"
discv5 = "0.10"
libc = "0.2"
tiny-keccak = { version = "2.0", features = ["keccak"] }
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
libloading = "0.8"
